# Jansetu

./: README.md
backend/: .env.copy  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
backend/src/: database.py  main.py
backend/src/models/: auth.py
backend/src/routes/: auth.py
backend/src/utils/: jwt.py
frontend/: .prettierrc  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/.husky/: pre-commit
frontend/src/app/: layout.tsx
