[project]
name = "jansetu-backend"
version = "0.0.1"
description = "A crowd-sourced platform for reporting civic issues."
authors = [
    {name = "Aditya Jyoti",email = "aj.adityajyoti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[tool.black]
line-length = 88
target-version = ["py310"]
include = "src"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-select = ["I", "E", "F"] # I: import, E: pycodestyle, F: pyflakes
exclude = [".venv", "__pypackages__"]
src = ["src"]

[tool.poetry.scripts]
lint = "ruff check src"
format = "black src"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.13.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
